--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-15 Thu 17:48]
+#+CAPTION: Clock summary at [2016-12-15 Thu 18:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *24:07* |       |       | 100.0 |
+| *Total time*                                                                | *24:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 24:07   |       |       | 100.0 |
-| Active                                                                      |         | 24:07 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.9 |
+| Stories                                                                     | 24:29   |       |       | 100.0 |
+| Active                                                                      |         | 24:29 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   2.1 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  24.5 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   5.8 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  15.7 |
-| STARTED Add io support in C#                                                |         |       | 11:34 |  48.0 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  24.2 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   5.7 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  15.5 |
+| STARTED Add io support in C#                                                |         |       | 11:56 |  48.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -300,6 +300,7 @@ One way to achieve this is to delete these directories after we copy
 the data set across.
 
 *** STARTED Add io support in C#                                      :story:
+    CLOCK: [2016-12-15 Thu 18:10]--[2016-12-15 Thu 18:32] =>  0:22
     CLOCK: [2016-12-15 Thu 14:45]--[2016-12-15 Thu 17:48] =>  3:03
     CLOCK: [2016-12-15 Thu 13:42]--[2016-12-15 Thu 14:10] =>  1:02
     CLOCK: [2016-12-15 Thu 10:05]--[2016-12-15 Thu 12:39] =>  2:34
