--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,21 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-16 Fri 09:37]
+#+CAPTION: Clock summary at [2016-12-16 Fri 10:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *25:10* |       |       | 100.0 |
+| *Total time*                                                                | *26:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 25:10   |       |       | 100.0 |
-| Active                                                                      |         | 25:10 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   2.1 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  23.5 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   5.6 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  15.0 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  47.4 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.7 |
+| Stories                                                                     | 26:13   |       |       | 100.0 |
+| Active                                                                      |         | 26:13 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   2.0 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  22.6 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   5.3 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  14.4 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  45.5 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.6 |
+| STARTED Add canned unit tests to C# model                                   |         |       |  1:03 |   4.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -372,6 +373,12 @@ Links:
 - [[http://geekswithblogs.net/BlackRabbitCoder/archive/2010/04/21/more-fun-with-c-iterators-and-generators.aspx][More Fun with C# Iterators and Generators]]
 - [[https://gist.github.com/DForshner/5533088][NaiveFibonacciSequenceGenerator.cs]]
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
+
+*** STARTED Add canned unit tests to C# model                         :story:
+    CLOCK: [2016-12-16 Fri 09:38]--[2016-12-16 Fri 10:41] =>  1:03
+
+We developed a number of C++ "canned tests" for all model elements. We
+need to port them across to C#.
 
 *** Add depth detection to io in C++                                  :story:
 
