--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,22 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-16 Fri 15:39]
+#+CAPTION: Clock summary at [2016-12-17 Sat 10:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *29:05* |       |       | 100.0 |
+| *Total time*                                                                | *29:38* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 29:05   |       |       | 100.0 |
-| Active                                                                      |         | 29:05 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.8 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  20.3 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.8 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  13.0 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  41.0 |
+| Stories                                                                     | 29:38   |       |       | 100.0 |
+| Active                                                                      |         | 29:38 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.7 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  20.0 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.7 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  12.8 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  40.3 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.3 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  13.5 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  13.2 |
+| STARTED Update C# stitch templates to match code                            |         |       |  0:33 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -385,6 +386,13 @@ Links:
 
 We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
+
+*** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 10:05]--[2016-12-17 Sat 10:38] =>  0:33
+
+Now we've finished adding sequence generators and io support with
+tests manually, we need to make the code generator match the
+handcrafted code.
 
 *** Consider adding a clone method for C#                             :story:
 
