--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-17 Sat 11:44]
+#+CAPTION: Clock summary at [2016-12-17 Sat 11:51]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *30:42* |       |       | 100.0 |
+| *Total time*                                                                | *30:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 30:42   |       |       | 100.0 |
-| Active                                                                      |         | 30:42 |       | 100.0 |
+| Stories                                                                     | 30:48   |       |       | 100.0 |
+| Active                                                                      |         | 30:48 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.7 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  19.3 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.6 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  19.2 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.5 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  12.3 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  38.9 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  38.7 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.2 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  12.8 |
-| STARTED Update C# stitch templates to match code                            |         |       |  1:37 |   5.3 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  12.7 |
+| STARTED Update C# stitch templates to match code                            |         |       |  1:43 |   5.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
 *** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 11:45]--[2016-12-17 Sat 11:51] =>  0:06
     CLOCK: [2016-12-17 Sat 11:14]--[2016-12-17 Sat 11:44] =>  0:30
     CLOCK: [2016-12-17 Sat 10:39]--[2016-12-17 Sat 11:13] =>  0:34
     CLOCK: [2016-12-17 Sat 10:05]--[2016-12-17 Sat 10:38] =>  0:33
