--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-17 Sat 14:14]
+#+CAPTION: Clock summary at [2016-12-17 Sat 14:47]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:46* |       |       | 100.0 |
+| *Total time*                                                                | *32:16* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:46   |       |       | 100.0 |
-| Active                                                                      |         | 31:46 |       | 100.0 |
+| Stories                                                                     | 32:16   |       |       | 100.0 |
+| Active                                                                      |         | 32:16 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.6 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  18.6 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.4 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.9 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  37.6 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.2 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  12.3 |
-| STARTED Update C# stitch templates to match code                            |         |       |  2:41 |   8.4 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  18.3 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.3 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.7 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  37.0 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.1 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  12.1 |
+| STARTED Update C# stitch templates to match code                            |         |       |  3:11 |   9.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
 *** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 14:24]--[2016-12-17 Sat 14:46] =>  0:22
     CLOCK: [2016-12-17 Sat 14:15]--[2016-12-17 Sat 14:23] =>  0:08
     CLOCK: [2016-12-17 Sat 14:02]--[2016-12-17 Sat 14:14] =>  0:12
     CLOCK: [2016-12-17 Sat 13:41]--[2016-12-17 Sat 14:01] =>  0:20
