--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-17 Sat 14:51]
+#+CAPTION: Clock summary at [2016-12-17 Sat 15:07]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *32:17* |       |       | 100.0 |
+| *Total time*                                                                | *32:30* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 32:17   |       |       | 100.0 |
-| Active                                                                      |         | 32:17 |       | 100.0 |
+| Stories                                                                     | 32:30   |       |       | 100.0 |
+| Active                                                                      |         | 32:30 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.6 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  18.3 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  18.2 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.3 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.7 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  37.0 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.6 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  36.7 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.1 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  12.1 |
-| STARTED Update C# stitch templates to match code                            |         |       |  3:12 |   9.9 |
+| STARTED Update C# stitch templates to match code                            |         |       |  3:25 |  10.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
 *** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 14:52]--[2016-12-17 Sat 15:05] =>  0:13
     CLOCK: [2016-12-17 Sat 14:50]--[2016-12-17 Sat 14:51] =>  0:01
     CLOCK: [2016-12-17 Sat 14:24]--[2016-12-17 Sat 14:46] =>  0:22
     CLOCK: [2016-12-17 Sat 14:15]--[2016-12-17 Sat 14:23] =>  0:08
@@ -408,6 +409,9 @@ handcrafted code.
 - camel case support
 - dumper does not have "Dumper" prefix
 - no properties still needs methods
+- helpers must end in "Dumper" since we're using that as the facet
+  postfix. Also, its very confusing to have helpers which are not
+  Dogen helpers. We need to rename them.
 
 *** Consider adding a clone method for C#                             :story:
 
